<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>force_dimension</name>
  <version>0.2.0</version>
  <description>A simple, node-based interface with haptic robotics via the Force Dimension SDK.</description>
  <maintainer email="nml@whit.contact">a.whit</maintainer>
  <license>Mozilla Public License 2.0</license>
  
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>ForceDimensionSDK</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
